opam-version: "2.0"
maintainer:   ["angelo@adlink-labs.tech" "olivier@adlink-labs.tech"]
authors:      ["Angelo Corsaro" "Olivier Hecart"]
homepage:     "https://zenoh.io"
bug-reports:  "https://github.com/atolab/zenoh/issues/"
dev-repo:     "git+https://github.com/atolab/zenoh.git"
tags:         ["zenoh"]

version:"0.4.0"
license: "Apache-2.0"

build: [
["dune" "subst"] {pinned}
 ["dune" "-p" name "-j" jobs]
]

install: [
  ["dune" "build" "@install"]
  ["dune" "install" name]
]


depends: [
  "ocaml" {>= "4.03.0" }
  "dune"
  "lwt" {>= "4.1.0" & < "5.0.0"}
  "apero-core" {>= "0.4.6"}
  "apero-net" {>= "0.4.6"}
  "zenoh-proto" {= "0.4.0"}
]
synopsis : "The zenoh-net ocaml API"
description: """
zenoh-net is a high-level and extremely wire-efficient named-data protocol
that nicely combines data streaming with distributed data quering.
This package provides OCaml API for developing zenoh-net applications."""
