opam-version: "2.0"
maintainer:   ["contact@adlink-labs.tech"]
authors:      ["Angelo Corsaro" "Julien Enoch" "Olivier Hecart" "Gabriele Baldoni"]
homepage:     "https://zenoh.io"
bug-reports:  "https://github.com/atolab/zenoh/issues/"
dev-repo:     "git+https://github.com/atolab/zenoh.git"
tags:         ["zenoh"]

version:"0.3.0"
license: "Apache-2.0"

build: [
["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]


depends: [
  "dune"
  "fmt"
  "logs"
  "lwt"
  "ppx_deriving"
  "lwt_ppx"
  "apero-core" {>= "0.4.4"}
  "zenoh-common" {= "0.3.0"}
]

synopsis : "Zenoh OCaml API"
description: """
The Zenoh API binding for OCaml."""
