opam-version: "2.0"
maintainer:   ["angelo@adlink-labs.tech" "olivier@adlink-labs.tech"]
authors:      ["Angelo Corsaro" "Olivier Hecart"]
homepage:     "https://zenoh.io"
bug-reports:  "https://github.com/atolab/zenoh/issues/"
dev-repo:     "https://github.com/atolab/zenoh.git"
tags:         ["zenoh"]

version:"0.2.0"
license: "Apache-2.0"

build: [
 ["jbuilder" "subst"] {pinned}
 ["jbuilder" "build" "-p" name "-j" jobs]
]

depends: [
  "jbuilder"
  "zenoh-pervasives" {>= "0.1.0"}
  "lwt" {>= "4.0.1"}
  "lwt.unix"
  "lwt.preemptive"
  "apero-core" {>= "0.4.0"}
  "apero-net" {>= "0.4.0"}
]

available: [ocaml-version >= "4.03.0"]
