opam-version: "2.0"
maintainer:   ["angelo@adlink-labs.tech" "olivier@adlink-labs.tech"]
authors:      ["Angelo Corsaro" "Olivier Hecart"]
homepage:     "https://zenoh.io"
bug-reports:  "https://github.com/atolab/zenoh/issues/"
dev-repo:     "git+https://github.com/atolab/zenoh.git"
tags:         ["zenoh"]

version:"0.3.0"
license: "Apache-2.0"

build: [
["dune" "subst"] {pinned}
 ["dune" "-p" name "-j" jobs]
]

install: [
  ["dune" "build" "@install"]
  ["dune" "install" name]
]

depends: [
  "ocaml" {>= "4.03.0" }
  "dune"
  "lwt" {>= "4.1.0"}
  "apero-core" {>= "0.4.5"}
  "apero-net" {>= "0.4.5"}
]

synopsis : "The zenoh protocol runtime"
description: """
zenoh is a high-level and extremely wire-efficient named-data protocol
that nicely combines data streaming with distributed data quering.
This package provides the zenoh runtime."""