opam-version: "2.0"
maintainer:   ["contact@adlink-labs.tech"]
authors:      ["Julien Enoch"]
homepage:     "https://zenoh.io"
bug-reports:  "https://github.com/atolab/zenoh/issues/"
dev-repo:     "git+https://github.com/atolab/zenoh.git"
tags:         ["zenoh"]

version:"0.4.0"
license: "Apache-2.0"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "-p" name "-j" jobs]
]

install: [
  ["dune" "build" "-p" name "@install"]
  ["dune" "install" name]
]


depends: [
  "ocaml" {>= "4.03.0"}
  "dune"
  "zenoh-storages-be-lib"  {= "0.3.0"}
]

conflicts: [
  "lwt" {< "4.0.0"}
]
