opam-version: "2.0"
maintainer:   ["angelo@adlink-labs.tech" "olivier@adlink-labs.tech"]
authors:      ["Angelo Corsaro" "Olivier Hecart"]
homepage:     "https://zenoh.io"
bug-reports:  "https://github.com/atolab/zenoh/issues/"
dev-repo:     "git://github.com/atolab/zenoh.git"
tags:         ["zenoh"]

version:"0.2.0"
license: "Apache-2.0"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "-p" name "-j" jobs]
]

install: [
  ["dune" "build" "-p" name "@install"]
  ["dune" "install" name]
]

depends: [
  "ocaml" {>= "4.03.0" }
  "dune"
  "lwt" {<= "4.0.1"}
  "apero-core" {>= "0.3.0"}
  "apero-net" {>= "0.3.0"}
  "zenoh-proto"
  "zenoh-api
]

