[package]
name = "zenoh-ffi"
version = "0.5.0"
crate-type = ["staticlib", "cdylib"]
authors = ["kydos <angelo@icorsaro.net>",
           "Julien Enoch <julien@enoch.fr>",
           "Olivier Hécart <olivier.hecart@adlinktech.com",
		       "Luca Cominardi <luca.cominardi@adlinktech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
zenoh = { version = "0.5.0", path = "../zenoh" }
zenoh-protocol = { version = "0.5.0", path = "../zenoh-protocol" }
async-std = { version = "1.5.0", features = ["unstable"] }
async-trait = "0.1.29"
spin = "0.5.2"
rand = "0.7.3"
cbindgen = "0.14.2"
libc = "0.2.69"


[lib]
crate-type = ["cdylib"]