[package]
name = "zenoh-protocol"
version = "0.5.0"
authors = ["kydos <angelo@icorsaro.net>",
           "Julien Enoch <julien@enoch.fr>",
           "Olivier Hécart <olivier.hecart@adlinktech.com",
		   "Luca Cominardi <luca.cominardi@adlinktech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.5.0", features = ["unstable"] }
async-trait = "0.1.24"
byteorder = "1.3.2"
crossbeam = "0.7.3"
env_logger = "0.7.1"
log = "0.4.8"
net2 = "0.2.33"
rand = "0.7.3"
time = "0.2.2"
uuid = { version = "0.8.1", features = ["v4"] }

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "codec_bench"
harness = false

[[bench]]
name = "rwbuf_bench"
harness = false

[[bench]]
name = "rname_bench"
harness = false
