[package]
name = "zenoh-protocol"
version = "0.5.0"
authors = ["kydos <angelo@icorsaro.net>",
           "Julien Enoch <julien@enoch.fr>",
           "Olivier Hécart <olivier.hecart@adlinktech.com",
		   "Luca Cominardi <luca.cominardi@adlinktech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.30"
byteorder = "1.3.4"
crossbeam = "0.7.3"
env_logger = "0.7.1"
futures = "0.3.5"
log = "0.4.8"
net2 = "0.2.34"
rand = "0.7.3"
slab = "0.4.2"
time = "0.2.15"
uuid = { version = "0.8.1", features = ["v4"] }
zenoh-util =  { version = "0.1.0", path = "../zenoh-util" }
lazy_static = "1.4.0"

[dependencies.async-std]
version = "~1.5.0"
features = ["unstable"]

[dev-dependencies]
criterion = "0.3.2"

[[bench]]
name = "codec_bench"
harness = false

[[bench]]
name = "rwbuf_bench"
harness = false

[[bench]]
name = "rname_bench"
harness = false

[[bench]]
name = "data_creation"
harness = false

[[bin]]
name = "base_sub_peer"
test = false
bench = false

[[bin]]
name = "base_pub_peer"
test = false
bench = false

[[bin]]
name = "base_pubsub_peer"
test = false
bench = false

[[bin]]
name = "base_sub_client"
test = false
bench = false

[[bin]]
name = "base_pub_client"
test = false
bench = false

[[bin]]
name = "base_broker"
test = false
bench = false

