[package]
name = "zenoh-router"
version = "0.5.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.31"
rand = "0.7.3"
log = "0.4"
env_logger = "0.7.1"
zenoh-protocol =  { version = "0.5.0", path = "../zenoh-protocol" }
zenoh-util =  { version = "0.5.0", path = "../zenoh-util" }

[dependencies.async-std]
version = "~1.6.0"
features = ["unstable"]

[dev-dependencies]
criterion = "0.3.2"

[[bench]]
name = "tables_bench"
harness = false

[[bin]]
name = "broker"
test = false
bench = false