[package]
name = "zenoh-util"
version = "0.1.0"
authors = ["kydos <angelo@icorsaro.net>",
           "Luca Cominardi <luca.cominardi@adlinktech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
lazy_static = "1.4.0"

[dependencies.async-std]
version = "~1.6.0"
features = ["unstable"]
