[package]
name = "zenoh-util"
version = "0.5.0"
authors = ["kydos <angelo@icorsaro.net>",
           "Luca Cominardi <luca.cominardi@adlinktech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.33"
lazy_static = "1.4.0"
libloading = "0.6.2"
log = "0.4.8"
rand = "0.7.3"

[dependencies.async-std]
version = "~1.6.0"
features = ["unstable"]
