(executable
  (name       demo_sub)
  (modules    demo_sub)
  (libraries  apero-core apero-net lwt lwt.unix logs logs.lwt ppx_deriving.show ppx_deriving.ord zenoh-api)
  (preprocess (pps ppx_deriving.show ppx_deriving.ord lwt_ppx)))

(executable
  (name       demo_pub)
  (modules    demo_pub)
  (libraries  apero-core apero-net lwt lwt.unix logs logs.lwt ppx_deriving.show ppx_deriving.ord zenoh-api)
  (preprocess (pps ppx_deriving.show ppx_deriving.ord lwt_ppx)))
