(executable
  (name       demo_sub)
  (modules    demo_sub)
  (libraries  zenoh-ocaml)
  (preprocess (pps lwt_ppx)))

(executable
  (name       demo_pub)
  (modules    demo_pub)
  (libraries  zenoh-ocaml)
  (preprocess (pps lwt_ppx)))

(executable
  (name       demo_storage)
  (modules    demo_storage)
  (libraries  zenoh-ocaml)
  (preprocess (pps lwt_ppx)))

(executable
  (name       demo_eval)
  (modules    demo_eval)
  (libraries  zenoh-ocaml)
  (preprocess (pps lwt_ppx)))

(executable
  (name       demo_query)
  (modules    demo_query)
  (libraries  zenoh-ocaml)
  (preprocess (pps lwt_ppx)))
