(executable
  (name       demo_scout)
  (modules    demo_scout)
  (libraries  zenoh-net-ocaml)
  (preprocess (pps lwt_ppx)))

(executable
  (name       demo_sub)
  (modules    demo_sub)
  (libraries  zenoh-net-ocaml)
  (preprocess (pps lwt_ppx)))

(executable
  (name       demo_pub)
  (modules    demo_pub)
  (libraries  zenoh-net-ocaml)
  (preprocess (pps lwt_ppx)))

(executable
  (name       demo_storage)
  (modules    demo_storage)
  (libraries  zenoh-net-ocaml)
  (preprocess (pps lwt_ppx)))

(executable
  (name       demo_eval)
  (modules    demo_eval)
  (libraries  zenoh-net-ocaml)
  (preprocess (pps lwt_ppx)))

(executable
  (name       demo_query)
  (modules    demo_query)
  (libraries  zenoh-net-ocaml)
  (preprocess (pps lwt_ppx)))
