(copy_files ../zenoh-api/z_storage.ml)

(library
  (name            z_storage)
  (modules         z_storage)
  (public_name     z_storage)
  (libraries       zenoh-ocaml dynload-sys)
  (preprocess      (pps lwt_ppx)))

(rule
  (targets    storage-plugin.cmxs)
  (deps       (package z_storage))
  (action     (run ocamlfind ocamlopt
                  -shared
                  -linkall
                  -linkpkg
                  -thread
                  -dontlink apero-core
                  -dontlink zenoh-ocaml
                  -package z_storage
                  -o %{targets})))