(executable
  (name       sub)
  (modules    sub)
  (libraries  zenoh-ocaml)
  (preprocess (pps lwt_ppx)))

(executable
  (name       pub)
  (modules    pub)
  (libraries  zenoh-ocaml)
  (preprocess (pps lwt_ppx)))

(executable
  (name       storage)
  (modules    storage)
  (libraries  zenoh-ocaml)
  (preprocess (pps lwt_ppx)))

(executable
  (name       query)
  (modules    query)
  (libraries  zenoh-ocaml)
  (preprocess (pps lwt_ppx)))
