(executable
  (name       z_stream)
  (modules    z_stream)
  (libraries  zenoh-ocaml)
  (preprocess (pps lwt_ppx)))

(executable
  (name       z_write)
  (modules    z_write)
  (libraries  zenoh-ocaml)
  (preprocess (pps lwt_ppx)))

(executable
  (name       z_sub)
  (modules    z_sub)
  (libraries  zenoh-ocaml)
  (preprocess (pps lwt_ppx)))

(executable
  (name       z_storage)
  (modules    z_storage)
  (libraries  zenoh-ocaml)
  (preprocess (pps lwt_ppx)))

(executable
  (name       z_eval)
  (modules    z_eval)
  (libraries  zenoh-ocaml)
  (preprocess (pps lwt_ppx)))

(executable
  (name       z_query)
  (modules    z_query)
  (libraries  zenoh-ocaml)
  (preprocess (pps lwt_ppx)))
