[package]
name = "example-plugin"
version = "0.5.0"
authors = ["kydos <angelo@icorsaro.net>",
           "Julien Enoch <julien@enoch.fr>",
           "Olivier Hécart <olivier.hecart@adlinktech.com",
		   "Luca Cominardi <luca.cominardi@adlinktech.com>"]
edition = "2018"

[lib]
name = "example_plugin"
crate-type = ["cdylib"]


[dependencies]
zenoh = { version = "0.5.0", path = "../../zenoh" }
log = "0.4"
env_logger = "0.7.1"
spin = "0.5.2"
# rand = "0.7.3"

[dependencies.async-std]
version = "~1.6.0"
features = ["unstable"]

