(executable
  (name       zenohd)
  (modules    zenohd zconfig_t)
  (libraries  str lwt lwt.unix zenoh_proto apero-core apero-net atdgen logs logs.fmt logs.cli fmt fmt.cli fmt.tty cmdliner)
  (preprocess (pps lwt_ppx ppx_deriving.show ppx_deriving.ord)))

(executable
  (name       zenohc)
  (modules    zenohc)
  (libraries  str lwt lwt.unix zenoh_proto apero-core apero-net atdgen logs logs.fmt logs.cli fmt fmt.cli fmt.tty cmdliner)
  (preprocess (pps lwt_ppx ppx_deriving.show ppx_deriving.ord)))
