(executable
  (name       zenohd)
  (modules    zenohd zengine engine_state query session resource zRouter spn_tree discovery scouting routing querying)
  (libraries  str lwt lwt.unix zenoh_proto zenoh_tx_inet apero-core apero-net atdgen logs logs.fmt logs.cli fmt fmt.cli fmt.tty cmdliner)
  (preprocess (pps lwt_ppx ppx_deriving.show ppx_deriving.ord  ppx_sexp_conv)))
