(library
  (name           zenoh_common)
  (public_name    zenoh-common)
  (wrapped        false)
  (libraries      apero-core apero-time zenoh-net-ocaml str lwt lwt.unix logs logs.lwt ppx_deriving.show ppx_deriving.ord)
  (preprocess
    (pps ppx_deriving.show ppx_deriving.ord lwt_ppx ppx_cstruct)))
