(library
  (name            zenoh_http)
  (public_name     zenoh-http)
  (wrapped         false)
  (libraries       zenoh-router dynload-sys httpaf httpaf-lwt-unix ocplib-ocamlres)
  (preprocess      (pps lwt_ppx)))

(rule
  (targets    zenoh-plugin-http.cmxs)
  (deps       (package zenoh-http))
  (action (run ocamlfind ocamlopt
                  -shared
                  -linkall
                  -linkpkg
                  -thread
                  -dontlink zenoh-router
                  -dontlink apero-core
                  -package zenoh-http
                  -o %{targets}
  )))

(rule
  (targets resources.ml)
  (deps    (source_tree resources))
  (action  (run ocp-ocamlres resources -o %{targets})))
