(library
 (name            zenoh_ocaml)
  (modules        zenoh_ocaml zenoh_api)
  (public_name    zenoh-ocaml)
  (wrapped     false)
  (libraries       zenoh-common zenoh-net-ocaml cstruct lwt lwt.unix logs logs.lwt ppx_deriving.show ppx_deriving.ord)
  (preprocess
    (pps ppx_deriving.show ppx_deriving.ord lwt_ppx ppx_cstruct)))

(toplevel
  (name zenoh_toplevel)
  (libraries compiler-libs.toplevel zenoh_ocaml zenoh-common zenoh-net-ocaml cstruct lwt lwt.unix logs logs.lwt ppx_deriving.show ppx_deriving.ord))
