(library
  (name            zenoh_router)
  (public_name     zenoh-router)
  (wrapped         false)
  (libraries  str lwt lwt.unix zenoh-proto zenoh-tx-inet apero-core apero-net apero-time atdgen logs logs.fmt logs.cli fmt fmt.cli fmt.tty cmdliner yojson ppx_deriving_yojson.runtime)
  (preprocess (pps lwt_ppx ppx_deriving.show ppx_deriving.ord  ppx_sexp_conv ppx_deriving_yojson)))
